show module image
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -637,6 +637,9 @@ Three Way Handshake) the mss value is False. So a plain statement like "mss &lt;
 additional check is required.
 </p>
 
+<p>
+		<img src="images/captcp-show.png" alt="Captcp Show Output on urxvt" />
+</p>
 
 <p>
 Show all packets with SACK blocks and where the first TCP SACK block
