--- a/index.htm
+++ b/index.htm
@@ -176,7 +176,7 @@
 
 			<p>
 				<div class="alert alert-success">
-					<h4 class="alert-heading">What you see is NOT what you get</h4>
+					<h4 class="alert-heading">What you see is <span class="label label-important">NOT</span> what you get</h4>
 					<p>
 					Attention: if you capture traffic via PF_PACKET socket nowadays you may not capture real wire data!
 					Current network adapters support offloading capabilities. It is wise
