--- a/index.htm
+++ b/index.htm
@@ -859,7 +859,7 @@ $ captcp statistic --format '%(sent-network-layer)d byte transfered' --filter '*
 
 
 		<!--***** MODULE *************-->
-		<h3>Highlight Module</h3>
+		<h2>Highlight Module</h2>
 
 				<p>
 		The Highlight module is show a similar output compared to tcpdump.
@@ -1134,7 +1134,7 @@ tracemerge pcapfile:auck-comb.gz legacyatm:auck-0.gz legacyatm:auck-1.gz
 		================================================== -->
 		<footer class="footer">
 		<p class="pull-left">
-		© Copyright Hagen Paul Pfeifer 2010, 2011. All Rights Reserved.
+		© Copyright Hagen Paul Pfeifer 2012. All Rights Reserved.
 		</p>
 		<p class="pull-right"><a href="#">Back to top</a></p>
 		</footer>
