--- a/index.htm
+++ b/index.htm
@@ -847,15 +847,15 @@ $ captcp show -m "sackblocks and len(sackblocks) &gt; 0 and sackblocks[0][0] &lt
 			<tbody>
 				<!--            -->
 				<tr>
-					<td>-o &lt;format;&gt;</td>
-					<td>--format &lt;format;&gt;</td>
+					<td>-o &lt;format&gt;</td>
+					<td>--format &lt;format&gt;</td>
 					<td>Start machine mode</td>
 					<td>--format '%(sent-network-layer)d byte transfered'</td>
 				</tr>
 				<!--            -->
 				<tr>
-					<td>-i &lt;filter;&gt;</td>
-					<td>--filter &lt;filter;&gt;</td>
+					<td>-i &lt;filter&gt;</td>
+					<td>--filter &lt;filter&gt;</td>
 					<td>Limit number of connections</td>
 					<td>--filter '*:5001-*:*,*:*-*:5001'</td>
 				</tr>
