--- a/index.htm
+++ b/index.htm
@@ -33,6 +33,16 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	})();
 </script>
+<script type="text/javascript">
+/* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+/* ]]> */</script>
 
 
 	</head>
@@ -66,7 +76,13 @@
 									</ul>
 							</li>
               <li class=""> <a href="#installation">Installation</a> </li>
-              <li class=""> <a href="#miscellaneous">Miscellaneous</a> </li>
+							<li class=""> <a href="#miscellaneous">Miscellaneous</a> </li>
+							</ul><ul class="nav pull-right"><li class="divider-vertical"></li>
+              <li class="">
+						<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://hgn.github.com/captcp/"></a>
+						<noscript><a href="http://flattr.com/thing/564883/CAPTCP-Script-Collection-to-Analyze-TCP-Traces" target="_blank">
+						<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
+							</li>
             </ul>
           </div>
         </div>
