--- a/index.htm
+++ b/index.htm
@@ -78,7 +78,7 @@
               <li class=""> <a href="#installation">Installation</a> </li>
 							<li class=""> <a href="#miscellaneous">Miscellaneous</a> </li>
 							</ul><ul class="nav pull-right"><li class="divider-vertical"></li>
-              <li class="">
+							<li class=""><br />
 						<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://hgn.github.com/captcp/"></a>
 						<noscript><a href="http://flattr.com/thing/564883/CAPTCP-Script-Collection-to-Analyze-TCP-Traces" target="_blank">
 						<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
