make table boardered
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -672,7 +672,7 @@ $ captcp show -m "sackblocks and len(sackblocks) &gt; 0 and sackblocks[0][0] &lt
 		</p>
 
 <p>
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
  <thead>
 		<tr>
 			<th>Keyword</th>
@@ -851,7 +851,7 @@ $ captcp show -m "sackblocks and len(sackblocks) &gt; 0 and sackblocks[0][0] &lt
 		<h3>Options</h3>
 
 		<p>
-		<table class="table table-striped">
+		<table class="table table-striped table-bordered">
 		 <thead>
 				<tr>
 					<th>Short Option</th>
