some words about bugs
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -1103,7 +1103,22 @@ su -c make install
 		The project is currently hosted at <a href="http://github.com">github.com</a>. If
 		you wan't to fork or participate on github please see <a
 		href="https://github.com/hgn/captcp">https://github.com/hgn/captcp</a>
-		</p>
+	</p>
+
+	<h3>Bugs or Feature Request</h3>
+
+	<p>
+	Unlikely, but if you trigger a bug, it is best if you send me the PCAP file
+	(or upload somewhere and send the link) including the complete comandline. I
+	should reproduce the error at home then. Make sure you have the newest
+	version installed.
+	</p>
+
+	<p>
+	If you have programmed a module and want to integrate it in the main
+	distribution: no problem. Just sent me the patch and a description of the
+	functionality.
+	</p>
 
 		</div>
 	</div>
