--- a/index.htm
+++ b/index.htm
@@ -1088,6 +1088,8 @@ Options:
 
 	<div class="span12">
 
+	<h3>Installation Instructions</h3>
+
 		<p>
 		There is no binary distribution of the python script. I decided to bundle
 		the whole functionality in one Python script. So just grab the repository and type make install.
@@ -1097,6 +1099,7 @@ Options:
 <pre>
 git clone git://github.com/hgn/captcp.git
 su -c make install
+# don't forget to 'rehash' if you use zsh
 </pre>
 
 		<p>
