--- a/index.htm
+++ b/index.htm
@@ -8,11 +8,6 @@
 		<meta name="author" content="Hagen Paul Pfeifer">
 		<meta name="Copyright" content="Copyright Hagen Paul Pfeifer 2010,2011. All Rights Reserved.">
 
-		<!-- Dublin Core Metadata : http://dublincore.org/ -->
-		<meta name="DC.title" content="PACTCP">
-		<meta name="DC.subject" content="Python network analyze tool">
-		<meta name="DC.creator" content="Hagen Paul Pfeifer">
-
 		<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -132,7 +127,8 @@
 		Captcp is a tool for TCP analysis of PCAP dump files recorded via Tcpdump
 		or Wireshark. Captcp is an attempt to rewrite several analyze scripts and
 		provide a clean and consistent command line syntax. Captcp is written in
-		Python and easy extendable.
+		Python and easy extendable. Captcp is not a substitute for Tcpdump or
+		Wireshark. It complement these tools instead!
 		</p>
 
 
