--- a/index.htm
+++ b/index.htm
@@ -38,8 +38,6 @@
         t.parentNode.insertBefore(s, t);
     })();
 /* ]]> */</script>
-
-
 	</head>
 
 	<body data-spy="scroll" data-target=".nav" data-offset="50">
@@ -74,9 +72,9 @@
 							<li class=""> <a href="#miscellaneous">Miscellaneous</a> </li>
 							</ul><ul class="nav pull-right"><li class="divider-vertical"></li>
 							<li class=""><br />
-						<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://hgn.github.com/captcp/"></a>
-						<noscript><a href="http://flattr.com/thing/564883/CAPTCP-Script-Collection-to-Analyze-TCP-Traces" target="_blank">
-						<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
+<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://research.protocollabs.com/captcp/"></a>
+<noscript><a href="http://flattr.com/thing/568001/Captcp" target="_blank">
+<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
 							</li>
             </ul>
           </div>
