add spectrum image
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -925,6 +925,9 @@ $ captcp.py sound -f 1.1 -r 0.5 -i 0.1 -a 3.0 trace.pcap
 		<source src="data-sound/packet.mp3" />
 		</audio>
 
+<p>
+		<img src="images/spectrum.png" alt="Audio Spectrum" />
+</p>
 
 		</p>
 
