--- a/index.htm
+++ b/index.htm
@@ -914,16 +914,16 @@ $ captcp statistic --format '%(sent-network-layer)d byte transfered' --filter '*
 
 
 <pre>
-$ captcp.py sound -f 1.1 -r 0.5 -i 0.1 -a 3.0 trace.pcap
+$ captcp sound -f 1.1 -r 0.5 -i 0.1 -a 3.0 trace.pcap
 [...]
 </pre>
 
 		<p>
-
 		<audio controls preload="auto" autobuffer> 
-		<source src="data-sound/packet.ogg" />
-		<source src="data-sound/packet.mp3" />
+			<source src="data-sound/packet.ogg" type="audio/ogg"/>
+			<source src="data-sound/packet.mp3" type="audio/mp3"/>
 		</audio>
+		</p>
 
 <p>
 		<img src="images/spectrum.png" alt="Audio Spectrum" />
