--- a/index.htm
+++ b/index.htm
@@ -235,6 +235,7 @@ ethtool -K ethN rx off tx off sg off tso off
 			<li><strong>template</strong> - provides a set of Gnuplot and Makefiles templare for post-processing</li>
 			<li><strong>payloadtimeport</strong> - analyze payload size distribution over time and port number</li>
 			<li><strong>payloadtime</strong> - Display the payload data over time, separated by services (ports) or protocols</li>
+			<li><strong>sound</strong> - Generate a Audio Waveform for a given TCP connection</li>
 		</ul>
 		</p>
 
