add GPLv3 licence section
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/index.htm
+++ b/index.htm
@@ -1218,6 +1218,15 @@ su -c make install
 	functionality.
 	</p>
 
+	<h3>Open Source</h3>
+
+	<p>
+	Captcp is Open Source and licenced under GPLv3. You can use it in your
+	private project, company project or wherever you want. See the <a href="https://www.gnu.org/licenses/gpl-faq.html">FSF FAQ</a> for more information.
+	</p>
+
+	<img src="images/gplv3-88x31.png" alt="GPLv3 artwork" />
+
 		</div>
 	</div>
 	</section>
