data: integrate stop button
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/data/connection-animation-data/index.html
+++ b/data/connection-animation-data/index.html
@@ -29,6 +29,7 @@
 		<p>
 		<div>
 			<button id="run" class="cupid-green" type="button">Play</button>
+			<button id="stop" class="cupid-green" type="button">Stop</button>
 		</div>
 		</p>
 
